Change Book Nav li list-item-style to disc

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2810,7 +2810,7 @@ body.site-name-finance-and-operations {
 
 #block-book-navigation {
   ul li.leaf {
-    list-style-type: circle; 
+    list-style-type: disc; 
   }
 }
 
