--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -1735,6 +1735,27 @@ ul.action-links {
 #block-user-online {}
 
 
+/*
+ * "Print Block" block
+ */
+#block-print-block-print-block {
+  float: right;
+  margin-bottom: 0;
+  margin-top: -2.5em;
+  width: 188px;
+
+  h2 {
+    float: left;
+  }
+
+  img {
+    height: 32px;
+    margin-left: 10px;
+    width: 32px;
+
+  }
+}
+
 /* =============================================================================
  *   Node Styling
  * ========================================================================== */
