Remove bottom margin from staff names on CAM

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2848,7 +2848,7 @@ body.site-name-finance-and-operations {
 .site-name-capital-assets-management{
 	.view-contact-us{
 		.views-field-nothing{
-			margin: 10px 0;
+			margin-top: 10px;
 		}
 	}
 }
