CAM FAQ page category margins

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2858,9 +2858,9 @@ body.site-name-finance-and-operations {
 	display:none;
 }
 
-// View all FAQ link on CAM
-.site-name-capital-assets-management #block-views-faq-topic-list-block .view-footer {
-	margin-top: 1.5em;
+//FAQ view on CAM
+.site-name-capital-assets-management #block-views-3d2632baea7e9b93dc5c7c9af2ac322a .views-row-last {
+  margin-bottom: 20px;
 }
 
 // Contact Us view on CAM
