--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -1742,16 +1742,18 @@ ul.action-links {
   float: right;
   margin-bottom: 0;
   margin-top: -2.5em;
-  width: 188px;
+  width: 141px;
 
   h2 {
     float: left;
+    font-size: 1.1em;
   }
 
   img {
-    height: 32px;
+    height: 18px;
     margin-left: 10px;
-    width: 32px;
+    vertical-align: middle;
+    width: 18px;
 
   }
 }
