--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2833,6 +2833,10 @@ body.site-name-finance-and-operations {
 	}
 } 
 
+// Hide front page title on CAM
+.site-name-capital-assets-management.front h1#page-title {
+  display: none;
+}
 
 // Contact Page on CAM
 .site-name-capital-assets-management{
