Print Block link styling

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -1732,6 +1732,13 @@ ul.action-links {
   padding-top: 6px;
   width: 141px;
 
+  a {
+    color: #2D2D2D;
+    font-family: Lato, hevletica, arial, sans-serif;
+    font-size: 1.1em;
+    font-weight: bold;
+  }
+
   h2 {
     float: left;
     font-size: 1.1em;
