Position bottom panes on GOA front page

--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -124,3 +124,9 @@
     margin-right: -10px;
   }
 }
+
+// Arrange bottom panes on GAO front page
+.site-name-grant-accounting-office #panels-ipe-regionid-two_66_33_bottom .panels-ipe-portlet-wrapper {
+  float: left;
+  width: 50%;
+}
