--- a/css/responsive.tablet.portrait.css
+++ b/css/responsive.tablet.portrait.css
@@ -1,1 +1,1 @@
-#name-and-slogan{float:left;margin-bottom:10px;margin-top:30px;width:100%}#nav-wrapper{display:none}
+#name-and-slogan{float:left;margin-bottom:10px;margin-top:30px;width:100%}#nav-wrapper{display:none}.site-name-grant-accounting-office #panels-ipe-regionid-two_66_33_bottom .panels-ipe-portlet-wrapper{float:left;width:50%}
