--- a/sass/responsive.tablet.portrait.scss
+++ b/sass/responsive.tablet.portrait.scss
@@ -22,3 +22,9 @@
 #nav-wrapper {
   display: none;
 }
+
+// Arrange bottom panes on GAO front page
+.site-name-grant-accounting-office #panels-ipe-regionid-two_66_33_bottom .panels-ipe-portlet-wrapper {
+  float: left;
+  width: 50%;
+}
