Position bottom panes on GOA front page for all visitors

--- a/css/responsive.tablet.portrait.css
+++ b/css/responsive.tablet.portrait.css
@@ -1,1 +1,1 @@
-#name-and-slogan{float:left;margin-bottom:10px;margin-top:30px;width:100%}#nav-wrapper{display:none}.site-name-grant-accounting-office #panels-ipe-regionid-two_66_33_bottom .panels-ipe-portlet-wrapper{float:left;width:50%}
+#name-and-slogan{float:left;margin-bottom:10px;margin-top:30px;width:100%}#nav-wrapper{display:none}.site-name-grant-accounting-office .pane-announcements,.site-name-grant-accounting-office .pane-1{float:left;width:50%}
