GAO Resources pane content styling

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2850,7 +2850,7 @@ body.site-name-finance-and-operations {
 }
 
 // Resources pane on GAO homepage
-.site-name-grant-accounting-office #panels-ipe-paneid-4 ul li { //CHANGE NUMBER to 5 FOR TEST
+.site-name-grant-accounting-office #panels-ipe-paneid-5 ul li { 
   list-style: none;
 }
 
