--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -127,7 +127,7 @@
 
 // Arrange bottom panes on GAO front page
 .site-name-grant-accounting-office { 
-  .pane-announcements, .pane-1 {
+  .pane-gao-announcements, .pane-1 {
     float: left;
     width: 50%;
   }
