--- a/sass/responsive.tablet.landscape.scss
+++ b/sass/responsive.tablet.landscape.scss
@@ -95,7 +95,7 @@
 
 // Arrange bottom panes on GAO front page
 .site-name-grant-accounting-office { 
-  .pane-announcements, .pane-1 {
+  .pane-gao-announcements, .pane-1 {
     float: left;
     width: 50%;
   }
