Apply theming to FA Contacts pane

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2811,8 +2811,10 @@ body.site-name-finance-and-operations {
 	font-style: italic;
 }
 
-// Featured Content on GAO and Book Navigation blocks
-.pane-front-page-featured-content, #block-book-navigation{
+// Featured Content on GAO, Book Navigation blocks, FA Contacts pane
+.pane-front-page-featured-content, 
+#block-book-navigation, 
+.site-name-financial-analysis.front .pane-2 {
 	background-color: #FCFCFC;
 	border: 1px solid #E5E5E5;
 	@include border-radius(6px, 4px);
