Remove underline form H1 on FA

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2903,7 +2903,7 @@ body.site-name-finance-and-operations {
 
 // FA underline for headings
 .site-name-financial-analysis #main-content {
-  h1, h2, h3 {
+  h2, h3 {
     border-bottom: 1px solid #FFC344;
     line-height: 1.8em;
     margin-bottom: 5px;
