--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2930,3 +2930,10 @@ body.site-name-finance-and-operations {
   margin-left: 0;
   margin-right: 20px;
 }
+
+// FA Meeting block styles 
+.site-name-financial-analysis .inline-label {
+  float: left;
+  font-weight: bold;
+  margin-right: 5px;
+}
