--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2931,9 +2931,13 @@ body.site-name-finance-and-operations {
   margin-right: 20px;
 }
 
-// FA Meeting block styles 
+// Controller Meeting styles 
 .site-name-controlleramp039s-office .inline-label {
   float: left;
   font-weight: bold;
   margin-right: 5px;
+}
+
+.site-name-controlleramp039s-office.section-past-meetings .views-row {
+  margin-bottom: 20px;
 }
