Update page class

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2938,6 +2938,6 @@ body.site-name-finance-and-operations {
   margin-right: 5px;
 }
 
-.site-name-controlleramp039s-office.section-past-meetings .views-row {
+.site-name-controlleramp039s-office.page-budget-officers-past-meetings .views-row {
   margin-bottom: 20px;
 }
