Use bullets for Controller's Related Departments menu

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2941,3 +2941,8 @@ body.site-name-finance-and-operations {
 .site-name-controlleramp039s-office.page-budget-officers-past-meetings .views-row {
   margin-bottom: 20px;
 }
+
+// Related Departments pane on Controller
+.site-name-controlleramp039s-office .menu-name-menu-off-site-links ul.menu li {
+  list-style-type: disc;
+}
