Controller front page margins

--- a/sass/responsive.tablet.landscape.scss
+++ b/sass/responsive.tablet.landscape.scss
@@ -100,3 +100,9 @@
     width: 50%;
   }
 }
+
+// Controller front page margins
+.site-name-controlleramp039s-office.front .region-two-50-second .block-inner {
+  margin-left: 20px;
+  margin-right: 0;
+}
