--- a/sass/responsive.tablet.landscape.scss
+++ b/sass/responsive.tablet.landscape.scss
@@ -102,7 +102,7 @@
 }
 
 // Controller front page margins
-.site-name-controlleramp039s-office.front .region-two-50-second .block-inner {
+.site-name-controlleramp039s-office.front .region-two-50-second .pane-menu-off-site-links .block-inner {
   margin-left: 20px;
   margin-right: 0;
 }
