--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2582,6 +2582,10 @@ tr.error {
  * ========================================================================== */
  
 .panel-pane {
+  .block-inner {
+    margin: 0;
+  }
+
   margin-bottom: 20px;
 
   h2 {
