Add margin-bottom on Controller Announcements page

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2956,3 +2956,8 @@ body.site-name-finance-and-operations {
 .site-name-controlleramp039s-office.page-contact-us #content .panel-pane .block-inner {
   margin: 0;
 }
+
+// Controller Announcements page
+.site-name-controlleramp039s-office.page-announcements .views-row {
+  margin-bottom: 10px;
+}
