Position more links on Controller

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2961,3 +2961,9 @@ body.site-name-finance-and-operations {
 .site-name-controlleramp039s-office.page-announcements .views-row {
   margin-bottom: 10px;
 }
+
+// Controller more links 
+.site-name-controlleramp039s-office .more-link {
+  margin-top: 10px;
+  text-align: left;
+}
