Remove margin beneath photo on Controller's Contact Us page to move up Staff Listing

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2967,3 +2967,7 @@ body.site-name-finance-and-operations {
   margin-top: 10px;
   text-align: left;
 }
+
+.site-name-controlleramp039s-office .pane-3 p {
+  margin-bottom: 0;
+}
