Book nav & 2nd+ level menu block bullet positioning

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2847,6 +2847,13 @@ body.site-name-finance-and-operations {
 .region-sidebar-second .block-menu-block {
   ul li.leaf {
     list-style-type: disc; 
+    list-style-position: outside;
+    margin-left: 11px;
+  }
+
+  ul li.expanded, ul li.collapsed {
+    list-style-position: outside;
+    margin-left: 11px;
   }
 }
 
