remove bullets from main main - IE issue

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -1626,6 +1626,8 @@ ul.action-links {
 
   li {
     margin: 0;
+    list-style-image: none;
+    list-style-type: none;
   }
 
   li.menu-depth-1 {
