Style for horizontal rule

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -173,6 +173,12 @@ samp,
 kbd,
 var {}
 
+hr {
+  background: #CCCCCC;
+  border: 0;
+  height: 1px;
+}
+
 
 /* =============================================================================
  *   Wrappers
