Set min-height of AFR calendar view rows

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3041,6 +3041,7 @@ body.site-name-finance-and-operations {
   .views-row {
     border-bottom: solid 1px #CCCCCC;
     margin-bottom: 1.5em;
+    min-height: 60px;
   }
 
   &.view-display-id-page_3 {
