--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -79,6 +79,22 @@ h2 a, h3 a, h4 a, h5 a, h6 a {
   text-decoration: none;
 }
 
+h2.pane-title {
+  border-bottom: 1px solid #FFC344;
+  margin-bottom: 16px;
+  position: relative;
+ 
+  &:after {
+   background: none repeat scroll 0 0 #FFC344;
+    bottom: -3px;
+    content: " ";
+    height: 6px;
+    position: absolute;
+    right: 0;
+    width: 6px;
+  }
+}
+
 p {}
 
 a {
