Center dates on AFR mini calendar

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3087,6 +3087,7 @@ body.site-name-finance-and-operations {
   .calendar-calendar {
     td.mini, td.empty {
       border: 1px solid #CCCCCC;
+      text-align: center;
     }
 
     th.days {
