--- a/sass/global.base.scss
+++ b/sass/global.base.scss
@@ -1005,11 +1005,12 @@ div.flex-pauseplay {
 
 //Views read-more class
 .view p.top-read-more {
-	bottom: 37px;
 	display: block;
 	float: right;
   margin: 0;
   position: relative;
+  top: -37px;
+  width: auto;
 }
 
 /************************* FRONT PAGE EVENT STYLES *************************/
