--- a/sass/responsive.desktop.scss
+++ b/sass/responsive.desktop.scss
@@ -134,3 +134,27 @@
   margin-left: 20px;
   margin-right: 0;
 }
+
+// UBill Slider
+.site-name-university-billing-office {
+  .flexslider {
+    .slides img {
+      width: 445px;
+    }
+
+    .views-field-body {
+      float: right;
+      padding-left: 15px;
+      padding-right: 10px;
+      width: 225px;
+
+      h3 {
+        margin-bottom: 5px;
+      }
+    }
+
+    li {
+      background-color: #F5F5F5;
+    }
+  }
+}
