Ubill FAQ view margins

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3148,6 +3148,13 @@ body.site-name-finance-and-operations {
   }
 }
 
+/* UBill FAQs */
+.site-name-university-billing-office .view-ubill-faq {
+  ul {
+    margin-bottom: 10px;
+  }
+}
+
 // UBill Slider
 .site-name-university-billing-office {
   .flexslider {
