--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3174,3 +3174,20 @@ body.site-name-finance-and-operations {
     }
   }
 }
+
+// UBill Staff Directory
+.site-name-university-billing-office .view-staff-directory {
+  th {
+    &.views-field-title {
+      width: 20%;
+    }
+
+    &.views-field-field-job-title {
+      width: 40%;
+    }
+
+    &.views-field-field-phone-number {
+      width: 20%;
+    }
+  }
+}
