UBill staff directory table headers

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3190,4 +3190,12 @@ body.site-name-finance-and-operations {
       width: 20%;
     }
   }
+
+  thead tr {
+    background-color: white !important;
+  }
+
+  form th {
+    color: #2D2D2D;
+  }
 }
