AFR calendar item export margins

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3148,6 +3148,12 @@ body.site-name-finance-and-operations {
   }
 }
 
+
+// AFR Calendar Item Export
+.site-name-accounting-and-financial-reporting .view-calendar-items-export .views-row {
+  margin-bottom: 15px;
+}
+
 /* UBill FAQs */
 .site-name-university-billing-office .view-ubill-faq {
   ul {
