Apply menu block styles to core menu blocks in sidebar second

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2856,6 +2856,7 @@ body.site-name-finance-and-operations {
 #block-book-navigation, 
 .site-name-financial-analysis.front .pane-2,
 .region-sidebar-second .block-menu-block,
+.region-sidebar-second .block-menu,
 .site-name-accounting-and-financial-reporting #block-views-calendar-of-deadlines-block-1 {
 	background-color: #FCFCFC;
 	border: 1px solid #E5E5E5;
