UBill staff directory header color

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3202,7 +3202,7 @@ body.site-name-finance-and-operations {
     background-color: white !important;
   }
 
-  form th {
+  thead th {
     color: #202020;
   }
 }
