style Most Viewed block on Treasury Operations front page

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2857,7 +2857,8 @@ body.site-name-finance-and-operations {
 .site-name-financial-analysis.front .pane-2,
 .region-sidebar-second .block-menu-block,
 .region-sidebar-second .block-menu,
-.site-name-accounting-and-financial-reporting #block-views-calendar-of-deadlines-block-1 {
+.site-name-accounting-and-financial-reporting #block-views-calendar-of-deadlines-block-1,
+.site-name-treasury-operations .pane-treasury-front-page-featured-content {
 	background-color: #FCFCFC;
 	border: 1px solid #E5E5E5;
 	@include border-radius(6px, 4px);
