Treasury staff directory table headers

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3223,4 +3223,12 @@ body.site-name-finance-and-operations {
   td.views-field-title, td.views-field-field-phone-number{
     width: 25%;
   }
+
+  thead tr {
+    background-color: white !important;
+  }
+
+  thead th {
+    color: #202020;
+  }
 }
