UBill staff directory captions

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3195,6 +3195,10 @@ body.site-name-finance-and-operations {
   thead th {
     color: #202020;
   }
+
+  caption {
+    display: none;
+  }
 }
 
 // UBill Calendar
