Tax Useful Forms & Documents pane

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2874,7 +2874,8 @@ body.site-name-finance-and-operations {
 .region-sidebar-second .block-menu-block,
 .region-sidebar-second .block-menu,
 .site-name-accounting-and-financial-reporting #block-views-calendar-of-deadlines-block-1,
-.site-name-treasury-operations .pane-treasury-front-page-featured-content {
+.site-name-treasury-operations .pane-treasury-front-page-featured-content,
+.site-name-tax-office .useful-forms-documents {
 	background-color: #FCFCFC;
 	border: 1px solid #E5E5E5;
 	@include border-radius(6px, 4px);
