Bottom margin for FMB A-Z list of records

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3281,3 +3281,9 @@ body.site-name-finance-and-operations {
     }
   }
 }
+
+.site-name-financial-management-and-budget .view-fmb-records-a-z {
+  ul {
+    margin-bottom: 15px;
+  }
+}
