Remove bottom margin from Featured Content text on ID Card site

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3302,3 +3302,7 @@ body.site-name-finance-and-operations {
     margin-top: 0;
   }
 }
+
+.site-name-id-card-programs .pane-idcard-front-page-featured-content {
+  p { margin-bottom: 0; }
+}
