--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3303,6 +3303,14 @@ body.site-name-finance-and-operations {
   }
 }
 
+// ID Card Featured Content
 .site-name-id-card-programs .pane-idcard-front-page-featured-content {
   p { margin-bottom: 0; }
+}
+
+// ID Card FAQs
+.site-name-id-card-programs .view-idcard-faq {
+  ul {
+    margin-bottom: 10px;
+  }
 }
