vertical-align for AFR calendar tables

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3141,6 +3141,13 @@ body.site-name-finance-and-operations {
   } 
 }
 
+// AFR calendar tables
+.site-name-accounting-and-financial-reporting .view-calendar-of-deadlines {
+  td {
+    vertical-align: top;
+  }
+}
+
 /* AFR staff directory */
 .site-name-accounting-and-financial-reporting .view-contact-us {
   th {
