--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3059,7 +3059,7 @@ body.site-name-finance-and-operations {
 
 /* AFR Calendar views */
 .site-name-accounting-and-financial-reporting {
-  td.views-field-field-deadline-1, .view-calendar-of-deadlines.view-display-id-page_2 .views-field-field-deadline {
+  td.views-field-field-deadline-1, .view-calendar-of-deadlines.view-display-id-page_2 td.views-field-field-deadline {
     width: 20%;
   }
 
