--- a/css/print.css
+++ b/css/print.css
@@ -16,3 +16,10 @@ a[href^="http"]:after,a[href^="http"]:visited:after{content:"(" attr(href) ")";f
   padding: 5px;
   width: auto;
 }
+
+/* don't print non-active slideshow items */
+li.views_slideshow_cycle_hidden { display: none;}
+.flexslider .slides li {
+	list-style-image: none;
+	list-style-type: none;
+}
